--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Train Delays Checker</title>
+    <title>Train Delays Checker V2</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -44,7 +44,11 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="https://i.imgur.com/Iz25hBG.png" alt="">
+                                    <img src="https://i.imgur.com/s2D8juk.png" alt="">
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <img src="https://i.imgur.com/6ZsbhKo.png" alt="">
                                 </div>
 
                             </div>
@@ -58,9 +62,12 @@
                             <ul>
                                 <li><strong>Category</strong>: Website Design</li>
                                 <li><strong>Project Year</strong>: 2023</li>
-                                <li><strong>Project URL</strong>: <a
-                                        href="https://nurafianzulkifli.github.io/train-delays-checker/"
-                                        target="_blank">Train Delays Checker</a></li>
+                                <li><strong>Project URL</strong>: <br>
+                                    <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/"
+                                        target="_blank">Train Delays Checker V2</a><br>
+                                    <a href="https://nurafianzulkifli.github.io/train-delays-checker/"
+                                        target="_blank">Train Delays Checker V1</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -68,7 +75,8 @@
                             <p>
                                 A pet-project of mine. Created just to keep track of train delays and breakdowns. The
                                 current features only included an Overview of Days Since Last Reported Failure, the
-                                Delays Overview, as well as Recent Incidents (i.e. Incidents History). I do wish to make this into a real-time website one day.
+                                Delays Overview, as well as Recent Incidents (i.e. Incidents History). I do wish to make
+                                this into a real-time website one day.
                             </p>
                         </div>
                     </div>
