--- a/index.html
+++ b/index.html
@@ -353,6 +353,22 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/s2D8juk.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Train Delays Checker V2</h4>
+                <p>Website Design</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/s2D8juk.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Train Delays Checker V2"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/delays-checker.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/onb8rea.png" class="img-fluid" alt="">
@@ -363,22 +379,6 @@
                   <a href="https://i.imgur.com/onb8rea.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="New Wayfinding System for BP12 Jelapang"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/bp12.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
-            <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/Iz25hBG.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Train Delays Checker</h4>
-                <p>Website Design</p>
-                <div class="portfolio-links">
-                  <a href="https://i.imgur.com/Iz25hBG.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Train Delays Checker"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/delays-checker.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
@@ -678,7 +678,7 @@
         &copy; Copyright <strong><span>2023</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: September 2023
+        Last Modified: November 2023
       </div>
     </div>
   </footer><!-- End Footer -->
