2024-02 Feature Update to Version 2402

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -44,11 +44,11 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="https://i.imgur.com/s2D8juk.png" alt="">
+                                    <img src="https://i.imgur.com/3Q3DFDx.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="https://i.imgur.com/6ZsbhKo.png" alt="">
+                                    <img src="https://i.imgur.com/tC9Mb2p.png" alt="">
                                 </div>
 
                             </div>
@@ -58,10 +58,10 @@
 
                     <div class="col-lg-4">
                         <div class="portfolio-info">
-                            <h3>Project information</h3>
+                            <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
                             <ul>
-                                <li><strong>Category</strong>: Website Design</li>
-                                <li><strong>Project Year</strong>: 2023</li>
+                                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Website Design</li>
+                                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
                                 <li><strong>Project URL</strong>: <br>
                                     <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/"
                                         target="_blank">Train Delays Checker V2</a><br>
