--- a/worksbynrfz/ezlink-red.html
+++ b/worksbynrfz/ezlink-red.html
@@ -14,7 +14,10 @@
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -44,27 +47,27 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/Tug5dic.png" alt="">
+                  <img src="https://i.imgur.com/a3L94Ji.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/T45cOvH.png" alt="">
+                  <img src="https://i.imgur.com/qRHZvgG.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/N4hDsvR.png" alt="">
+                  <img src="https://i.imgur.com/UvFeTJk.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/N4hDsvR.png" alt="">
+                  <img src="https://i.imgur.com/9ySLbhY.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/5BK60jd.png" alt="">
+                  <img src="https://i.imgur.com/NyKYZGJ.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/A9hjMfI.png" alt="">
+                  <img src="https://i.imgur.com/dcTyzYr.png" alt="">
                 </div>
 
 
@@ -75,10 +78,10 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Concepts & Replications</li>
-                <li><strong>Project Year</strong>: 2023</li>
+                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Concepts & Replications</li>
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
