--- a/worksbynrfz/wayfind.html
+++ b/worksbynrfz/wayfind.html
@@ -14,7 +14,10 @@
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -44,7 +47,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/vCrjzcZ.png" alt="">
+                  <img src="https://i.imgur.com/dQ1DiXn.png" alt="">
                 </div>
 
               </div>
@@ -54,10 +57,10 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Website Design</li>
-                <li><strong>Project Year</strong>: 2020 - Present</li>
+                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Website Design</li>
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2020 - Present</li>
                 <li><strong>Project URL</strong>: <a
                     href="https://nurafianzulkifli.github.io/signages-nrfz/" target="_blank">Wayfinding? Right this way.</a></li>
               </ul>
