--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 <p>Infographic Design</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/FW5cI8r.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="Train Delays Checker V2"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
                   <a href="worksbynrfz/igra3.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
