--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="fa-brands fa-github" style="font-size: 32px"></div>
         </a>
 
-        <a href="https://twitter.com/_nrf_z" target="_blank" class="media_link" title="X (Twitter)">
+        <a href="https://twitter.com/nrfzlkf_" target="_blank" class="media_link" title="X (Twitter)">
           <div class="fa-brands fa-x-twitter" style="font-size: 32px"></div>
         </a>
         <a href="https://www.facebook.com/Nrfnzlkf/" target="_blank" class="media_link" title="Facebook">
