2024-02 Feature Update to Version 2402

--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -13,14 +13,16 @@
     <link href="../assets/img/favicon.png" rel="icon">
     <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
@@ -60,9 +62,11 @@
                         <div class="portfolio-info">
                             <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;Project Information</h3>
                             <ul>
-                                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Website Design</li>
-                                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
-                                <li><strong>Project URL</strong>: <br>
+                                <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Website
+                                    Design</li>
+                                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>:
+                                    2023</li>
+                                <li><strong><i class="fa-solid fa-link"></i>&nbsp;&nbsp;Project URL</strong>: <br>
                                     <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/"
                                         target="_blank">Train Delays Checker V2</a><br>
                                     <a href="https://nurafianzulkifli.github.io/train-delays-checker/"
