--- a/worksbynrfz/wayfind.html
+++ b/worksbynrfz/wayfind.html
@@ -23,7 +23,6 @@
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
@@ -61,8 +60,8 @@
               <ul>
                 <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Website Design</li>
                 <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2020 - Present</li>
-                <li><strong>Project URL</strong>: <a
-                    href="https://nurafianzulkifli.github.io/signages-nrfz/" target="_blank">Wayfinding? Right this way.</a></li>
+                <li><strong><i class="fa-solid fa-link"></i>&nbsp;&nbsp;Project URL</strong>: <br>
+                  <a href="https://nurafianzulkifli.github.io/signages-nrfz/" target="_blank">Wayfinding? Right this way.</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -83,8 +82,7 @@
   </main><!-- End #main -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
