--- a/worksbynrfz/mrt-signage-rep-s2.html
+++ b/worksbynrfz/mrt-signage-rep-s2.html
@@ -23,7 +23,6 @@
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
@@ -73,7 +72,7 @@
               <ul>
                 <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Concepts & Replications</li>
                 <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
-                <!-- <li><strong>Project URL</strong>: <a href="#"></a></li> -->
+                <!-- <li><strong><i class="fa-solid fa-link"&nbsp;&nbsp;></i>Project URL</strong>: <a href="#"></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
@@ -96,8 +95,7 @@
   </main><!-- End #main -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up" style="font-size: 20px;"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
