--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="fa-solid fa-house"></i><span>Home</span></a></li>
         <li><a href="#about-me" class="nav-link scrollto"><i class="fa-solid fa-user" style="padding: 2px;"></i><span>About Me</span></a></li>
+        <li><a href="#skills" class="nav-link scrollto"><i class="fa-solid fa-chart-bar"></i><span>Skills</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-timeline"></i><span>Timelines</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
               NRFZ</span></a>
