--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   </header><!-- End Header -->
 
-  <!-- ===================================================================== Hero Section ===================================================================== -->
+  <!-- ============================================= Hero Section ============================================= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
 
     <div id="centered-container" data-aos="fade-up">
@@ -86,7 +86,7 @@
 
   <main id="main">
 
-    <!-- ===================================================================== About Me Section ===================================================================== -->
+    <!-- ========================================== About Me Section ========================================== -->
     <section id="about-me" class="about-me">
       <div class="container" data-aos="fade-up">
 
@@ -172,7 +172,7 @@
       </div>
     </section>
 
-    <!-- ===================================================================== Skills Section ===================================================================== -->
+    <!-- ========================================== Skills Section ========================================== -->
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -281,7 +281,7 @@
       </div>
     </section><!-- End Skills Section -->
 
-    <!-- ===================================================================== Resume Section ===================================================================== -->
+    <!-- ================================================ Resume Section ================================================ -->
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
 
@@ -382,7 +382,7 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ===================================================================== Portfolio Section ===================================================================== -->
+    <!-- ==================================== Portfolio Section ==================================== -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -561,6 +561,22 @@
                   <a href="https://i.imgur.com/B1ktST3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications S1"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
                   <a href="worksbynrfz/mrt-signage-rep-s1.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-id">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/0cL7BPm.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Hydration Regime Infographic</h4>
+                <p>Infographic Design</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/0cL7BPm.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="MRT Signages Concept/Replications S1"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                  <a href="worksbynrfz/hydrationreg.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
