--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
         <div class="section-title">
           <h2><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Works By NRFZ</h2>
-          <p>A collection of works I have done over the years. Some are commisioned, some are just passion projects. My
+          <p>A collection of works I have done over the years. Some are commissioned, some are just passion projects. My
             huge interests are illustrations, like signages, vehicles and wireframes.</p>
         </div>
 
