--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <div class="row g-2" data-aos-delay="200">
 
-          <div class="about-item col-lg-12 col-md-12" data-aos="fade-in">
+          <div class="about-item col-lg-12 col-md-12" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -108,7 +108,7 @@
             </div>
           </div>
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="fade-in">
+          <div class="about-item col-lg-4 col-md-4" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -120,7 +120,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="fade-in">
+          <div class="about-item col-lg-4 col-md-4" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -132,7 +132,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="fade-in">
+          <div class="about-item col-lg-4 col-md-4" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -144,7 +144,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col-lg-4 col-md-4" data-aos="fade-in">
+          <div class="about-item col-lg-4 col-md-4" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
@@ -156,7 +156,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="about-item col-lg-8 col-md-8" data-aos="fade-in">
+          <div class="about-item col-lg-8 col-md-8" data-aos="fade-up">
             <div class="service-item">
               <div class="details">
                 <div class="icon">
