--- a/index.html
+++ b/index.html
@@ -414,6 +414,22 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-id">
             <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/hmARG3p.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>LTA Bus Stop Pole Design Refresh </h4>
+                <p>Concepts & Replications</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/hmARG3p.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                  <a href="worksbynrfz/lta-bp.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-id">
+            <div class="portfolio-wrap">
               <img src="https://i.imgur.com/FW5cI8r.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>How To Use TimeTree Infographic </h4>
@@ -702,7 +718,7 @@
         &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: February 2024
+        Last Modified: March 2024
       </div>
     </div>
   </footer><!-- End Footer -->
