--- a/index.html
+++ b/index.html
@@ -416,11 +416,11 @@
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/hmARG3p.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>LTA Bus Stop Pole Design Refresh </h4>
+                <h4>LTA Bus Stop Pole Design Refresh</h4>
                 <p>Concepts & Replications</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/hmARG3p.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                    title="How To Use TimeTree Infographic"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
+                    title="LTA Bus Stop Pole Design Refresh"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
                   <a href="worksbynrfz/lta-bp.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
