--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>New Wayfinding System for BP12 Jelapang</title>
+  <title>LTA Bus Stop Pole Design Refresh</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
