--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -44,7 +44,7 @@
               <p>
                 A metal pole erected beside the bus stop, which shows the bus routes that call at the particular stop.
                 Last modernized back in 2009, I believe the iconographies and colours are due for a refresh - in line
-                with the new Wayfinding system introduced in 2019
+                with the new Wayfinding system introduced in 2019.
               </p>
             </div>
           </div>
