--- a/index.html
+++ b/index.html
@@ -255,6 +255,14 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Sketchup <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6">
