--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-id">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/hmARG3p.png" class="img-fluid" alt="">
               <div class="portfolio-info">
