--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
               style="padding: 2px;"></i><span>About Me</span></a></li>
         <li><a href="#skills" class="nav-link scrollto"><i class="fa-solid fa-chart-bar"></i><span>Skills</span></a>
         </li>
+        <li><a href="#ord" class="nav-link scrollto"><i class="fa-solid fa-person-military-rifle"></i><span>ORD Counter</span></a>
+        </li>
         <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-timeline"></i><span>Timelines</span></a>
         </li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
@@ -291,6 +293,36 @@
 
       </div>
     </section><!-- End Skills Section -->
+
+
+       <!-- ========================================== ORD Section ========================================== -->
+       <section id="ord" class="skills section-bg">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2><i class="fa-solid fa-person-military-rifle"></i>&nbsp;&nbsp;ORD Counter</h2>
+            <p>How many more days to ORD?</p>
+          </div>
+  
+          <div class="row skills-content">
+  
+            <div class="col-lg-12">
+  
+              <div class="progress">
+                <span class="skill">> 120 days remaining <i class="val">83%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+  
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Skills Section -->
+   
 
     <!-- ================================================ Resume Section ================================================ -->
     <section id="resume" class="resume">
