--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="col-lg-12">
   
               <div class="progress">
-                <span class="skill">> 120 days remaining <i class="val">83%</i></span>
+                <span class="skill"> less than <u>120 days</u> remaining <i class="val">83%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   </div>
