--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -8,6 +8,7 @@
   <title>LTA Bus Stop Pole Design Refresh</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta property="og:image" content="https://i.imgur.com/7vAfn5f.png"/>
 
   <!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
