--- a/worksbynrfz/wayfind.html
+++ b/worksbynrfz/wayfind.html
@@ -8,6 +8,7 @@
   <title>Wayfinding? Right this way. - Improving PT Signages</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta property="og:image" content="https://i.imgur.com/7vAfn5f.png"/>
 
   <!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
