--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
             <div class="col-lg-12">
   
               <div class="progress">
-                <span class="skill"> less than <u>79 days</u> remaining <i class="val">89%</i></span>
+                <span class="skill">71 days remaining <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
