--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div id="centered-container" data-aos="fade-up">
       <div id="profile-picture"></div>
       <span id="title">Nurafian Zulkifli</span>
-      <span id="position">An Aspiring UI/UX Designer &amp; Web Developer</span>
+      <span id="position">Supply Assistant (GE), Admin Support Assistant <br> &amp; IT Diploma Graduate</span>
       <div id="media">
         <a href="https://github.com/nurafianZulkifli" target="_blank" class="media_link" title="GitHub">
           <div class="fa-brands fa-github" style="font-size: 32px"></div>
@@ -310,9 +310,9 @@
             <div class="col-lg-12">
   
               <div class="progress">
-                <span class="skill">65 days remaining <i class="val">91%</i></span>
+                <span class="skill">58 days remaining <i class="val">92%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
