--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
   
           <div class="section-title">
             <h2><i class="fa-solid fa-person-military-rifle"></i>&nbsp;&nbsp;ORD Counter</h2>
-            <p>How many more days to ORD?</p>
+            <p>How many more days to ORD? <b>(as of 01 June)</b></p>
           </div>
   
           <div class="row skills-content">
@@ -310,9 +310,9 @@
             <div class="col-lg-12">
   
               <div class="progress">
-                <span class="skill">58 days remaining <i class="val">92%</i></span>
+                <span class="skill">49 days remaining <i class="val">93.31%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="93.31" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
